Updated tools to work in local environment.