@@ -3,18 +3,21 @@
 #
 # Author: Todd King
 #
-version=${1:-1.2.0}
+version=${1:-2.2.1}
+homepath=${2:-/c/projects/spase/webapp/ROOT}
 vername=`echo $version | sed 's/\./_/g'`
 verpack=`echo $version | sed 's/\.//g'`
 
+# Make directory for build
+mkdir $homepath/tools/parser/build
+
 # Make the parser files
-cd /var/www/temp/spase/build/
-mkdir parser$verpack
-cd parser$verpack
-/var/www/spase/root/WEB-INF/runjava.sh org.spase.model.util.MakeParser $version
+mkdir $homepath/tools/parser/build/parser$verpack
+./runjava.sh org.spase.model.util.MakeParser $version $homepath/data $homepath/tools/parser/build/parser$verpack
 
 # Now compile
-javac -Djava.ext.dirs=/var/www/spase/root/WEB-INF/lib:$CLASSPATH -d .. *.java
+pushd $homepath/tools/parser/build/parser$verpack
+javac -d .. *.java
 
 # Build documentation
 javadoc -d ../api/parser$verpack *.java
@@ -24,8 +27,11 @@ cd ..
 jar cf parser$verpack.jar parser$verpack spase/parser$verpack api/parser$verpack
 
 # Distribute
-cp parser$verpack.jar /var/www/spase/root/tools/parser
-mkdir /var/www/spase/root/tools/parser/api$verpack
-/bin/rm -R -f /var/www/spase/root/tools/parser/api$verpack/*
-(cd api/parser$verpack; tar cf - .) | (cd /var/www/spase/root/tools/parser/api$verpack; tar xf - .)
+mv -f parser$verpack.jar $homepath/tools/parser
+rm -r -f $homepath/tools/parser/api$verpack
+mv -f api/parser$verpack $homepath/tools/parser/api$verpack
+popd
+
+# Clean-up
+/bin/rm -R -f $homepath/tools/parser/build
 
